--- a/webapp/lib/select2/css/select2.css
+++ b/webapp/lib/select2/css/select2.css
@@ -105,7 +105,7 @@ html[dir="rtl"] .select2-container .select2-choice > .select2-chosen {
     text-decoration: none;
 
     border: 0;
-    background: url('select2.png') right top no-repeat;
+    /* background: url('select2.png') right top no-repeat;*/
     cursor: pointer;
     outline: 0;
 }
@@ -218,7 +218,7 @@ html[dir="rtl"] .select2-container .select2-choice .select2-arrow {
     display: block;
     width: 100%;
     height: 100%;
-    background: url('select2.png') no-repeat 0 1px;
+  /*  background: url('select2.png') no-repeat 0 1px; */
 }
 
 html[dir="rtl"] .select2-container .select2-choice .select2-arrow b {
